--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
+    "glob": "^7.1.6",
+    "parcel": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "styled-jsx": "^3.4.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "staticFiles": {
+    "watcherGlob": "*"
   }
 }
