directory 구조 변경, product list 추가

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "bootstrap-slider": "^11.0.2",
     "classnames": "^2.2.6",
     "glob": "^7.1.6",
+    "jquery": "^3.6.0",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.1",
     "prop-types": "^15.7.2",
